# AgentOps

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_runs_spans.py  0002_runs_external_ref.py
backend/app/: __init__.py  config.py  database.py  exceptions.py  main.py  models.py  schemas.py
backend/app/routers/: runs.py
backend/tests/: conftest.py  test_api.py
examples/: README.md  demo-rich.ps1  demo-rich.sh  quickstart.ps1  quickstart.py  quickstart.sh
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  index.css  labels.ts  types.ts
frontend/src/components/: IntroStrip.tsx  SpanGantt.tsx  SpanTimeline.tsx  SpanTree.tsx
frontend/src/pages/: RunDetail.tsx  RunList.tsx
scripts/: up.ps1
sdk/python/: README.md  pyproject.toml
sdk/python/src/agentops_sdk/: __init__.py  client.py
