[project]
name = "agentops-sdk"
version = "0.1.0"
description = "Thin HTTP client for AgentOps /v1 (Run + Span ingest)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["httpx>=0.28,<1"]

[project.optional-dependencies]
dev = ["pytest>=8.3.0,<9"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
